<resources>
    <string name="app_name">布约</string>

    <!--自定义字符串-->
    <string name="business">商家</string>
    <string name="customer">用户</string>
    <string name="username">请输入用户名</string>
    <string name="password">请输入密码</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="confirm_pwd">请确认密码</string>
    <string name="keyword">关键词 :</string>
    <string name="name">请输入真实姓名</string>
    <string name="changshang_browser">厂商一览</string>
    <string name="all_classify">全部分类</string>
    <string name="choose_address">地址筛选</string>
    <string name="comprehensive_ranking">综合排序</string>
    <string name="buyo_business">布约厂商</string>
    <string name="detail1">[经营模式] 厂商描述n个字</string>
    <string name="detail2">厂商地址 ： 秋名山</string>
    <string name="fenshu">4.3分</string>
    <string name="input_goods_name">请输入商品名</string>
    <string name="message">消息</string>
    <string name="bupi_daquan">布匹大全</string>
    <string name="bupi_xuetang">布匹学堂</string>
    <string name="about_we">关于我们</string>
    <string name="daquan_detail">布匹大全描述</string>
    <string name="changshang_detail">厂商一览描述</string>
    <string name="xuetang_detail">布匹学堂描述</string>
    <string name="about_we_detail">关于我们描述</string>
    <string name="biaoti1">今日清仓大甩卖</string>
    <string name="biaoti1_1">38块一件</string>
    <string name="biaoti2">过了这村没这店</string>
    <string name="biaoti2_2">老司机带带钱</string>
    <string name="biaoti3">炸锅大甩卖</string>
    <string name="biaoti3_3">免费送啦！</string>
    <string name="xinwen">行业新闻</string>
    <string name="xinwen1">生意要怎么做？我家是做布匹生意</string>
    <string name="xinwen2">30万投资，可以做布料生意吗？</string>
    <string name="xinwen3">生意要怎么做？我家是做布匹生意</string>


    <string-array name="activitysearch">
        <item>全部</item>
        <item>商家</item>
        <item>布匹</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
