<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context="com.aode.buyoapp.business.BrowseBusinessActivity">

    <include
        android:id="@+id/browse_business_title"
        layout="@layout/activity_browse_business_title" />

    <LinearLayout
        android:id="@+id/browse_business_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/browse_business_title"
        android:orientation="horizontal">

        <Button
            style="@style/browser_business_btn"
            android:drawableLeft="@drawable/classify"
            android:text="@string/all_classify" />
        <ImageView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/light_huise"/>

        <Button
            style="@style/browser_business_btn"
            android:drawableLeft="@drawable/address"
            android:drawableRight="@drawable/d"
            android:text="@string/choose_address" />

        <ImageView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/light_huise"/>

        <Button
            style="@style/browser_business_btn"
            android:drawableLeft="@drawable/analyze"
            android:text="@string/comprehensive_ranking" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/browse_business_ll"
        android:orientation="vertical">

        <ImageView style="@style/transverse_line" />

        <RelativeLayout
            android:id="@+id/rl_browse_1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingBottom="17dp"
            android:paddingLeft="16dp"
            android:paddingTop="17dp">

            <ImageView
                android:id="@+id/iv_business_picture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="17dp"
                android:background="@drawable/business_picture" />

            <TextView
                android:id="@+id/textView4"
                style="@style/browser_business_changshang"
                android:layout_toEndOf="@+id/iv_business_picture"
                android:text="@string/buyo_business" />

            <TextView
                android:id="@+id/textView5"
                style="@style/browser_business_changshang_detail"
                android:layout_below="@+id/textView4"
                android:layout_toEndOf="@+id/iv_business_picture"
                android:text="@string/detail1" />

            <TextView
                style="@style/browser_business_changshang_detail2"
                android:layout_below="@+id/textView5"
                android:layout_toEndOf="@+id/iv_business_picture"
                android:text="@string/detail2" />

            <TextView
                style="@style/browser_business_changshang_fenshu"
                android:layout_toEndOf="@+id/textView5"
                android:text="@string/fenshu" />

        </RelativeLayout>

        <ImageView style="@style/transverse_line" />

        <RelativeLayout
            android:id="@+id/rl_browse_2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingBottom="17dp"
            android:paddingLeft="16dp"
            android:paddingTop="17dp">

            <ImageView
                android:id="@+id/iv_business_picture2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="17dp"
                android:background="@drawable/business_picture" />

            <TextView
                android:id="@+id/textView6"
                style="@style/browser_business_changshang"
                android:layout_toEndOf="@+id/iv_business_picture2"
                android:text="@string/buyo_business" />

            <TextView
                android:id="@+id/textView7"
                style="@style/browser_business_changshang_detail"
                android:layout_below="@+id/textView6"
                android:layout_toEndOf="@+id/iv_business_picture2"
                android:text="@string/detail1" />

            <TextView
                style="@style/browser_business_changshang_detail2"
                android:layout_below="@+id/textView7"
                android:layout_toEndOf="@+id/iv_business_picture2"
                android:text="@string/detail2" />

            <TextView
                style="@style/browser_business_changshang_fenshu"
                android:layout_toEndOf="@+id/textView7"
                android:text="@string/fenshu" />
        </RelativeLayout>

        <ImageView style="@style/transverse_line" />

        <RelativeLayout
            android:id="@+id/rl_browse_3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingBottom="17dp"
            android:paddingLeft="16dp"
            android:paddingTop="17dp">

            <ImageView
                android:id="@+id/iv_business_picture3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="17dp"
                android:background="@drawable/business_picture" />

            <TextView
                android:id="@+id/textView8"
                style="@style/browser_business_changshang"
                android:layout_toEndOf="@+id/iv_business_picture3"
                android:text="@string/buyo_business" />

            <TextView
                android:id="@+id/textView9"
                style="@style/browser_business_changshang_detail"
                android:layout_below="@+id/textView8"
                android:layout_toEndOf="@+id/iv_business_picture3"
                android:text="@string/detail1" />

            <TextView
                style="@style/browser_business_changshang_detail2"
                android:layout_below="@+id/textView9"
                android:layout_toEndOf="@+id/iv_business_picture3"
                android:text="@string/detail2" />

            <TextView
                style="@style/browser_business_changshang_fenshu"
                android:layout_toEndOf="@+id/textView9"
                android:text="@string/fenshu" />
        </RelativeLayout>

        <ImageView style="@style/transverse_line" />

    </LinearLayout>
</RelativeLayout>
